[package]
authors = ["Laurent Bernabe <laurent.bernabe@gmail.com>"]
edition = "2018"
name = "chess-exercises-organizer-rust-druid"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pleco = "0.5.0"
log = "0.4.11"

[dependencies.druid]
version = "0.7.0"
features = ["svg"]
